--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ geographiclib==2.0
 geopy==2.4.1
 gitdb==4.0.10
 GitPython==3.1.36
+gunicorn
 idna==3.10
 importlib-metadata==6.11.0
 itsdangerous==2.2.0
